Добавил hero-mobile

--- a/source/index.html
+++ b/source/index.html
@@ -46,6 +46,37 @@
       </button>
     </div>
   </header>
+  <main class="main">
+    <section class="main__hero hero">
+      <h2 class="hero__title visually-hidden">Галерея напитков</h2>
+      <div class="hero__slider slider">
+        <picture class="slider__picture">
+          <!-- <source type="image/webp" media="(min-width: 1440px)"
+              srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
+            <source type="image" media="(min-width: 1440px)" srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
+            <source type="image" media="(min-width: 768px)" srcset="img/index-can-tablet@1x.png, img/index-can-tablet@2x.png 2x"> -->
+          <img class="slider__image" width="280" height="280" src="images/flat_white_mobile@1x.png"
+            srcset="images/flat_white_mobile@2x.png 2x" alt="Напиток Декаф Флет.">
+        </picture>
+        <span class="slider__badge">Новинка!</span>
+        <h3 class="slider__title">Декаф Флэт Уайт</h3>
+        <p class="slider__description">Свежесваренный кофе без кофеина из&nbsp;Эфиопии с натуральным
+          фермерским&nbsp;молоком —
+          то, что нужно для&nbsp;расслабления после тяжёлого&nbsp;рабочего&nbsp;дня</p>
+        <div class="slider__buy buy">
+          <div class="buy__container">
+            <span class="buy__old-price">295₽</span>
+            <span class="buy__price">225₽</span>
+          </div>
+          <button class="buy__button button" type="button">Заказать</button>
+        </div>
+      </div>
+
+    </section>
+  </main>
 </body>
 
 </html>
