Сделал header и slider для 3 экранов

--- a/source/index.html
+++ b/source/index.html
@@ -10,73 +10,93 @@
 </head>
 
 <body class="page__body">
-  <header class="header">
-    <div class="header__container">
-      <a class="header__logo" href="#">
-        <picture>
-          <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desctop.svg">
-          <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
-          <img src="images/logo-mobile.svg" width="32" height="36" alt="Логотип.">
-        </picture>
-      </a>
-      <nav class="header__nav nav">
-        <ul class="nav__list">
-          <li class="nav__item">Главная</li>
-          <li class="nav__item">Каталог</li>
-          <li class="nav__item">Доставка</li>
-          <li class="nav__item">О нас</li>
-        </ul>
-      </nav>
-      <div class="header__user-menu user-menu">
-        <ul class="user-menu__list">
-          <li class="user-menu__item">
-            <a href="#">
-              <img src="images/icons/user-icon.svg" width="16" height="16" alt="Иконка пользователя">
-            </a>
-          </li>
-          <li class="user-menu__item">
-            <a href="#">
-              <img src="images/icons/basket-icon.svg" width="16" height="16" alt="Корзина">
-            </a>
-          </li>
-        </ul>
-      </div>
-      <button class="header__toggle burger-button" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-    </div>
-  </header>
-  <main class="main">
-    <section class="main__hero hero">
-      <h2 class="hero__title visually-hidden">Галерея напитков</h2>
-      <div class="hero__slider slider">
-        <picture class="slider__picture">
-          <!-- <source type="image/webp" media="(min-width: 1440px)"
-              srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
-            <source type="image" media="(min-width: 1440px)" srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
-            <source type="image" media="(min-width: 768px)" srcset="img/index-can-tablet@1x.png, img/index-can-tablet@2x.png 2x"> -->
-          <img class="slider__image" width="280" height="280" src="images/flat_white_mobile@1x.png"
-            srcset="images/flat_white_mobile@2x.png 2x" alt="Напиток Декаф Флет.">
-        </picture>
-        <span class="slider__badge">Новинка!</span>
-        <h3 class="slider__title">Декаф Флэт Уайт</h3>
-        <p class="slider__description">Свежесваренный кофе без кофеина из&nbsp;Эфиопии с натуральным
-          фермерским&nbsp;молоком —
-          то, что нужно для&nbsp;расслабления после тяжёлого&nbsp;рабочего&nbsp;дня</p>
-        <div class="slider__buy buy">
-          <div class="buy__container">
-            <span class="buy__old-price">295₽</span>
-            <span class="buy__price">225₽</span>
-          </div>
-          <button class="buy__button button" type="button">Заказать</button>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo">
+          <a class="header__logo-link" href="#">
+            <picture>
+              <source type="image/svg+xml" width="170" media="(min-width: 1440px)" srcset="images/logo-desctop.svg">
+              <source type="image/svg+xml" width="82" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
+              <img src="images/logo-mobile.svg" width="32" height="36" alt="Логотип.">
+            </picture>
+          </a>
+          <span class="header__logo-description">Интернет-магазин кофейных напитков</span>
         </div>
+        <nav class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">Главная</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Каталог</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Доставка</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">О&nbsp;нас</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__nav nav-user">
+          <ul class="nav-user__list">
+            <li class="nav__item nav__item--user">
+              <a class="nav__link" href="#">
+                <img src="images/icons/user-icon.svg" width="16" height="16" alt="Иконка пользователя">
+                <span class="nav__link-text">Войти</span>
+              </a>
+            </li>
+            <li class="nav__item nav__item--user">
+              <a class="nav__link" href="#">
+                <img src="images/icons/basket-icon.svg" width="16" height="16" alt="Корзина">
+                <span class="nav__link-text">Корзина</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <button class="header__toggle burger-button" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
       </div>
+    </header>
+    <main class="main">
+      <section class="main__hero hero">
+        <h2 class="hero__title visually-hidden">Галерея напитков</h2>
+        <div class="hero__container">
+          <div class="hero__slider slider">
+            <picture class="slider__picture">
+              <source type="image/webp" media="(min-width: 1440px)" width="600" height="600" srcset="images/flat_white_desktop@1x.webp">
+              <source type="image/webp" media="(min-width: 768px)" width="476" height="476"
+                srcset="images/flat_white_tablet@1x.webp 1x, images/flat_white_tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="images/flat_white_mobile@1x.webp 1x, images/flat_white_mobile@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 1440px)" width="600" height="600"
+                srcset="images/flat_white_desktop@1x.png">
+              <source type="image/webp" media="(min-width: 768px)" width="476" height="476"
+                srcset="images/flat_white_tablet@1x.png, images/flat_white_tablet@2x.png 2x">
+              <img class="slider__image" width="280" height="280" src="images/flat_white_mobile@1x.png"
+                srcset="images/flat_white_mobile@2x.png 2x" alt="Напиток Декаф Флет.">
+            </picture>
+            <span class="slider__badge">Новинка!</span>
+            <h3 class="slider__title">Декаф Флэт Уайт</h3>
+            <p class="slider__description">Свежесваренный кофе без кофеина из&nbsp;Эфиопии с&nbsp;натуральным
+              фермерским&nbsp;молоком —
+              то, что нужно для&nbsp;расслабления после тяжёлого&nbsp;рабочего&nbsp;дня</p>
+            <div class="slider__buy buy">
+              <div class="buy__container">
+                <span class="buy__old-price">295₽</span>
+                <span class="buy__price">225₽</span>
+              </div>
+              <button class="buy__button button" type="button">Заказать</button>
+            </div>
+          </div>
+        </div>
 
-    </section>
-  </main>
+      </section>
+    </main>
+  </div>
+  <footer class="footer">footer</footer>
 </body>
 
 </html>
