Добавил разметку преимуществ

--- a/source/index.html
+++ b/source/index.html
@@ -66,7 +66,8 @@
         <div class="hero__container">
           <div class="hero__slider slider">
             <picture class="slider__picture">
-              <source type="image/webp" media="(min-width: 1440px)" width="600" height="600" srcset="images/flat_white_desktop@1x.webp">
+              <source type="image/webp" media="(min-width: 1440px)" width="600" height="600"
+                srcset="images/flat_white_desktop@1x.webp">
               <source type="image/webp" media="(min-width: 768px)" width="476" height="476"
                 srcset="images/flat_white_tablet@1x.webp 1x, images/flat_white_tablet@2x.webp 2x">
               <source type="image/webp"
@@ -92,7 +93,55 @@
             </div>
           </div>
         </div>
-
+      </section>
+      <section class="features">
+        <div class="features__container">
+          <h2 class="features__title">
+            Преимущества
+          </h2>
+          <p class="features__description">
+            Главные причины выбрать Drink2Go
+          </p>
+          <ul class="features__list">
+            <li class="features__item">
+              <h3 class="features__item-title  features__item-title--speed">
+                Скорость
+              </h3>
+              <p class="features__item-description">
+                Готовый напиток всегда под рукой — просто открой банку
+              </p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__item-title  features__item-title--fit">
+                Удобство
+              </h3>
+              <p class="features__item-description">
+                Легко помещается и в карман, и в маленькую сумочку
+              </p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__item-title features__item-title--energy">
+                Бодрость
+              </h3>
+              <p class="features__item-description">
+                Сбалансированная доза кофеина даст мощный заряд энергии
+              </p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__item-title features__item-title--eco">
+                Экологичность
+              </h3>
+              <p class="features__item-description">
+                Вся упаковка сделана из перерабатываемых материалов
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="catalog">
+        <h2 class="catalog__title">
+          Каталог
+        </h2>
       </section>
     </main>
   </div>
