--- a/source/index.html
+++ b/source/index.html
@@ -147,7 +147,7 @@
           <p class="catalog__description">
             Каталог кофейных напитков
           </p>
-          <form class="catalog__form form" action="https://echo.htmlacademy.ru">
+          <form class="catalog__form form" action="https://echo.htmlacademy.ru" method="get">
             <div class="form__wrapper">
               <fieldset class="form__fieldset price-filter">
                 <legend class="price-filter__title">Цена</legend>
@@ -282,13 +282,154 @@
               </fieldset>
             </div>
             <div class="form__buttons">
-              <button class="form__button button" type="button">Применить</button>
-              <button class="form__button button button--reset" type="button">Сбросить</button>
-
+              <button class="form__button button" type="submit">Применить</button>
+              <button class="form__button button button--reset" type="reset">Сбросить</button>
             </div>
           </form>
 
-          <div class="catalog__list"></div>
+          <div class="catalog__product">
+            <ul class="product__cards">
+              <li class="product__card">
+                <picture class="product__picture">
+                  <source type="image/webp" srcset="images/catalog-1@1x.webp 1x, images/catalog-1@2x.webp 2x">
+                  <img class="product__image" width="130" height="188" src="images/catalog-1@1x.jpg"
+                    srcset="images/catalog-1@2x.jpg 2x" alt="Напиток Декаф Флет Уайт.">
+                </picture>
+                <h3 class="product__title">
+                  Декаф Флэт Уайт
+                </h3>
+                <p class="product__description">
+                  Кофе без кофеина из Эфиопии
+                  с&nbsp;натуральным фермерским молоком
+                </p>
+                <div class="product__sell">
+                  <span class="product__price">225₽</span>
+                  <button class="product__button button" type="button">
+                    <svg class="main-footer__link-icon" width="20" height="16">
+                      <use href="images/icons/stack.svg#union" xmlns="http://www.w3.org/2000/svg"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
+                </div>
+              </li>
+              <li class="product__card">
+                <picture class="product__picture">
+                  <source type="image/webp" srcset="images/catalog-2@1x.webp 1x, images/catalog-2@2x.webp 2x">
+                  <img class="product__image" width="130" height="188" src="images/catalog-2@1x.jpg"
+                    srcset="images/catalog-2@2x.jpg 2x" alt="Напиток Декаф Флет Уайт.">
+                </picture>
+                <h3 class="product__title">
+                  Декаф Флэт Уайт
+                </h3>
+                <p class="product__description">
+                  Кофе без кофеина из Эфиопии
+                  с&nbsp;натуральным фермерским молоком
+                </p>
+                <div class="product__sell">
+                  <span class="product__price">225₽</span>
+                  <button class="product__button button" type="button">
+                    <svg class="main-footer__link-icon" width="20" height="16">
+                      <use href="images/icons/stack.svg#union" xmlns="http://www.w3.org/2000/svg"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
+                </div>
+              </li>
+              <li class="product__card">
+                <picture class="product__picture">
+                  <source type="image/webp" srcset="images/catalog-3@1x.webp 1x, images/catalog-3@2x.webp 2x">
+                  <img class="product__image" width="130" height="188" src="images/catalog-3@1x.jpg"
+                    srcset="images/catalog-3@2x.jpg 2x" alt="Напиток Декаф Флет Уайт.">
+                </picture>
+                <h3 class="product__title">
+                  Декаф Флэт Уайт
+                </h3>
+                <p class="product__description">
+                  Кофе без кофеина из Эфиопии
+                  с&nbsp;натуральным фермерским молоком
+                </p>
+                <div class="product__sell">
+                  <span class="product__price">225₽</span>
+                  <button class="product__button button" type="button">
+                    <svg class="main-footer__link-icon" width="20" height="16">
+                      <use href="images/icons/stack.svg#union" xmlns="http://www.w3.org/2000/svg"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
+                </div>
+              </li>
+              <li class="product__card">
+                <picture class="product__picture">
+                  <source type="image/webp" srcset="images/catalog-4@1x.webp 1x, images/catalog-4@2x.webp 2x">
+                  <img class="product__image" width="130" height="188" src="images/catalog-4@1x.jpg"
+                    srcset="images/catalog-4@2x.jpg 2x" alt="Напиток Декаф Флет Уайт.">
+                </picture>
+                <h3 class="product__title">
+                  Декаф Флэт Уайт
+                </h3>
+                <p class="product__description">
+                  Кофе без кофеина из Эфиопии
+                  с&nbsp;натуральным фермерским молоком
+                </p>
+                <div class="product__sell">
+                  <span class="product__price">225₽</span>
+                  <button class="product__button button" type="button">
+                    <svg class="main-footer__link-icon" width="20" height="16">
+                      <use href="images/icons/stack.svg#union" xmlns="http://www.w3.org/2000/svg"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
+                </div>
+              </li>
+              <li class="product__card">
+                <picture class="product__picture">
+                  <source type="image/webp" srcset="images/catalog-5@1x.webp 1x, images/catalog-5@2x.webp 2x">
+                  <img class="product__image" width="130" height="188" src="images/catalog-5@1x.jpg"
+                    srcset="images/catalog-5@2x.jpg 2x" alt="Напиток Декаф Флет Уайт.">
+                </picture>
+                <h3 class="product__title">
+                  Декаф Флэт Уайт
+                </h3>
+                <p class="product__description">
+                  Кофе без кофеина из Эфиопии
+                  с&nbsp;натуральным фермерским молоком
+                </p>
+                <div class="product__sell">
+                  <span class="product__price">225₽</span>
+                  <button class="product__button button" type="button">
+                    <svg class="main-footer__link-icon" width="20" height="16">
+                      <use href="images/icons/stack.svg#union" xmlns="http://www.w3.org/2000/svg"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
+                </div>
+              </li>
+              <li class="product__card">
+                <picture class="product__picture">
+                  <source type="image/webp" srcset="images/catalog-6@1x.webp 1x, images/catalog-6@2x.webp 2x">
+                  <img class="product__image" width="130" height="188" src="images/catalog-6@1x.jpg"
+                    srcset="images/catalog-6@2x.jpg 2x" alt="Напиток Декаф Флет Уайт.">
+                </picture>
+                <h3 class="product__title">
+                  Декаф Флэт Уайт
+                </h3>
+                <p class="product__description">
+                  Кофе без кофеина из Эфиопии
+                  с&nbsp;натуральным фермерским молоком
+                </p>
+                <div class="product__sell">
+                  <span class="product__price">225₽</span>
+                  <button class="product__button button" type="button">
+                    <svg class="main-footer__link-icon" width="20" height="16">
+                      <use href="images/icons/stack.svg#union" xmlns="http://www.w3.org/2000/svg"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
+                </div>
+              </li>
+
+            </ul>
+          </div>
         </div>
 
       </section>
