--- a/source/index.html
+++ b/source/index.html
@@ -288,6 +288,16 @@
           </form>
 
           <div class="catalog__product">
+
+            <div class="catalog__select">
+              <span class="select__label">Сортировка:</span>
+              <select class="select__field" name="select1">
+                <option>по умолчанию</option>
+                <option>еще уровень</option>
+                <option>еще уровень</option>
+              </select>
+            </div>
+
             <ul class="product__cards">
               <li class="product__card">
                 <picture class="product__picture">
