Добавил pagination & map

--- a/source/index.html
+++ b/source/index.html
@@ -437,14 +437,61 @@
                   </button>
                 </div>
               </li>
-
             </ul>
+
+            <div class="product__pagination pagination">
+              <ul class="pagination__list ">
+                <li class="pagination__item">
+                  <a class="pagination__link pagination__link-prev pagination__link--large" href="#">
+                    <span class="pagination__link-text">
+                      Назад
+                    </span>
+                  </a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">
+                    1
+                  </a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link pagination__link--current" href="#">
+                    2
+                  </a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">
+                    3
+                  </a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link pagination__link-next pagination__link--large" href="#">
+                    <span class="pagination__link-text">
+                      Вперёд
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+
           </div>
         </div>
 
       </section>
 
+      <section class="map">
+        <h2 class="map__titile visually-hidden">Карта</h2>
+        <div class="map__contetn">
+          <span class="map__pin">
+            <svg class="main-footer__link-icon" width="38" height="50">
+              <use href="images/icons/stack.svg#map-pin" xmlns="http://www.w3.org/2000/svg"></use>
+            </svg>
+          </span>
+        </div>
+
+      </section>
+
     </main>
+
   </div>
   <footer class="footer">footer</footer>
 </body>
