--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
         <div class="header__logo">
           <a class="header__logo-link" href="#">
             <picture>
-              <source type="image/svg+xml" width="170" media="(min-width: 1440px)" srcset="images/logo-desctop.svg">
+              <source type="image/svg+xml" width="170" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
               <source type="image/svg+xml" width="82" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
               <img src="images/logo-mobile.svg" width="32" height="36" alt="Логотип.">
             </picture>
@@ -493,7 +493,134 @@
     </main>
 
   </div>
-  <footer class="footer">footer</footer>
+  <footer class="footer">
+    <div class="footer__container">
+      <div class="footer__header">
+        <div class="footer__logo">
+          <div class="endless-line">&nbsp;</div>
+          <a class="footer__logo-link" href="#">
+            <picture>
+              <source type="image/svg+xml" width="170" media="(min-width: 768px)" srcset="images/logo-desktop.svg">
+              <img src="images/logo-tablet.svg" width="82" height="36" alt="Логотип.">
+            </picture>
+          </a>
+          <span class="footer__logo-description">Интернет-магазин кофейных напитков</span>
+        </div>
+        <ul class="footer__social social__list">
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <span class="visually-hidden">В контакте</span>
+              <svg class="main-footer__link-icon" width="20" height="20">
+                <use href="images/icons/stack.svg#vk" xmlns="http://www.w3.org/2000/svg"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <span class="visually-hidden">Пинтерест</span>
+              <svg class="main-footer__link-icon" width="20" height="20">
+                <use href="images/icons/stack.svg#pinterest" xmlns="http://www.w3.org/2000/svg"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <span class="visually-hidden">Одноклассники</span>
+              <svg class="main-footer__link-icon" width="20" height="20">
+                <use href="images/icons/stack.svg#ok" xmlns="http://www.w3.org/2000/svg"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <ul class="footer__list">
+        <li class="footer__items">
+          <div class="endless-line">&nbsp;</div>
+          <h3 class="footer__items-title">Интернет магазин</h3>
+          <ul class="footer__items-list">
+            <li class="footer__items-item">
+              <a class="footer__link" href="#">
+                Каталог
+              </a>
+            </li>
+            <li class="footer__items-item">
+              <a class="footer__link" href="#">
+                Доставка
+              </a>
+            </li>
+            <li class="footer__items-item">
+              <a class="footer__link" href="#">
+                Способы оплаты
+              </a>
+            </li>
+            <li class="footer__items-item">
+              <a class="footer__link" href="#">
+                О нас
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="footer__items">
+          <div class="endless-line">&nbsp;</div>
+          <h3 class="footer__items-title">Медиа</h3>
+          <ul class="footer__items-list">
+            <li class="footer__items-item">
+              <a class="footer__link" href="#">
+                Блог
+              </a>
+            </li>
+            <li class="footer__items-item">
+              <a class="footer__link" href="#">
+                Информация для СМИ
+              </a>
+            </li>
+            <li class="footer__items-item">
+              <a class="footer__link" href="#">
+                Правовая информация
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="footer__items">
+          <div class="endless-line">&nbsp;</div>
+          <h3 class="footer__items-title">Контакты</h3>
+          <ul class="footer__items-list">
+            <li class="footer__items-item">
+              <a class="footer__link footer__link--lower" href="#">
+                <svg class="footer__link footer__link-icon" width="20" height="16">
+                  <use href="images/icons/stack.svg#adress" xmlns="http://www.w3.org/2000/svg">
+                  </use>
+                </svg>
+                <span>Санкт-Петербург, набережная реки Карповки,&nbspдом 5</span>
+              </a>
+            </li>
+            <li class="footer__items-item">
+              <a class="footer__link footer__link--lower" href="#">
+                <svg class="footer__link-icon" width="13" height="16">
+                  <use href="images/icons/stack.svg#phone" xmlns="http://www.w3.org/2000/svg">
+                  </use>
+                </svg>
+                <span>+7 (999) 999-99-99</span>
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <div class="footer__bottom">
+        <a class="footer__link footer__link--lower footer__link--academy" href="#">
+          <span>Разработано в HTML Academy</span>
+          <svg class="footer__link-icon" width="13" height="16">
+            <use href="images/icons/stack.svg#logo-academy" xmlns="http://www.w3.org/2000/svg">
+            </use>
+          </svg>
+        </a>
+      </div>
+    </div>
+
+  </footer>
 </body>
 
 </html>
